syntax = "proto3";
package pbgo;

// 连接成功后服务器节点回复验证信息
message ServiceIdentifyACK {
  string service_name = 1;
  string service_id = 2;
  uint64 server_start_time = 3; // 当前服务器的启动时间
}

// PingReq 心跳包
message PingReq {
  int64 ms = 1;  // 毫秒级时间戳
}

// PingAck 心跳包回复
message PingAck {
  int64 ms = 1;  // 毫秒级时间戳
}

// CSPingReq 客户端连接后 发送ping消息
message CSPingReq {}

// SCPingAck 服务端收到客户端的ping消息后返回
message SCPingAck {}

message CSSendMsgReq { //project gate|game
  string msg = 1;
}

message SCSendMsgAck {
  int32     error   = 1;  // 错误码 0表示无错误
  string    msg     = 2;
}

// 服务器之间带有sessionId的消息转发
message MsgTransmitNtf {
  uint64 sessionId = 1;
  uint32 msgId = 2;
  bytes data = 3;
}