syntax = "proto3";
package pbgo;
option go_package = ".;pbgo";

message AccountRole {
  string open_id = 1;
}

message CSCreateRoleReq {}

message SCCreateRoleAck {}